fix(scene-02): align cursor with copy action

--- a/src/styles/scenes/_panic.scss
+++ b/src/styles/scenes/_panic.scss
@@ -59,7 +59,6 @@
   position: absolute;
   right: 56px;
   top: 69%;
-  transform: translateY(8px);
   width: 190px;
   z-index: 5;
 }
